Decryption test script
Creates a dummy payload: Generates a temporary test.txt file containing the message Secure Message 123
Simulates User Action via Standard Input: Because Crypt-Vault uses an interactive prompt, the Action defines a multi-line PowerShell string with exact sequential keystrokes:
1 (Pick Encyrption)
test.txt
test.enc
mypassword
2 (Pick Decryption)
test.enc
decrypted.txt
mypassword
11 (Exit App)
Pipes data: The multi-line string is fed directly into standard input ($inputs | .\build\Crypt-Vault.exe) causing our program to rapidly execute all options perfectly.
Validation assertion: Uses native PowerShell Compare-Object to check if decrypted.txt matches the original test.txt. If it doesn't match, it returns an error exit 1 causing the workflow/build step to fail outright—so broken cryptography changes will never pass undetected.
NOTE

You currently created this file at

.agents/workflows/build.yml
. For GitHub Actions to automatically pick up the workflow script when you push to the cloud, make sure you eventually move this file into a .github/workflows/ folder at the root of your repository!

Co-Authored-By: Mohammed0572 <196628212+Mohammed0572@users.noreply.github.com>
Co-Authored-By: Rohith Galoth <rohithgaloth@gmail.com>
Co-Authored-By: supr1795 <234802632+supr1795@users.noreply.github.com>

--- a/.agents/workflows/build.yml
+++ b/.agents/workflows/build.yml
@@ -18,7 +18,36 @@ jobs:
           mkdir build
           g++ -o build/Crypt-Vault.exe Crypt-Vault.cpp -std=c++17 -Wall -Wextra -O2 -ladvapi32
 
-      - name: Verify Executable
+      - name: Run E2E Encryption/Decryption Test
+        shell: powershell
         run: |
-          # Pipe exit command (11) into standard input to immediately quit the interactive menu to ensure the app doesn't immediately crash.
-          echo 11 | .\build\Crypt-Vault.exe
+          # Create a dummy test file
+          Set-Content -Path test.txt -Value "Secure Message 123"
+
+          # Simulate user interactions via Standard Input:
+          # 1) Encrypt test.txt to test.enc with password 'mypassword'
+          # 2) Decrypt test.enc to decrypted.txt with password 'mypassword'
+          # 11) Exit
+          $inputs = @"
+          1
+          test.txt
+          test.enc
+          mypassword
+          2
+          test.enc
+          decrypted.txt
+          mypassword
+          11
+          "@
+
+          # Pipe the inputs directly into our newly built executable
+          $inputs | .\build\Crypt-Vault.exe
+
+          # Verify that the decrypted text exactly matches the original text
+          $mismatch = Compare-Object (Get-Content test.txt) (Get-Content decrypted.txt)
+          if ($mismatch) {
+              Write-Error "Test failed: Decrypted file does not match original."
+              exit 1
+          } else {
+              Write-Host "Test passed! Files matched."
+          }
