Fixed the workflow-2
Fixed the workflow-2

Co-Authored-By: Mohammed0572 <196628212+Mohammed0572@users.noreply.github.com>
Co-Authored-By: Rohith Galoth <rohithgaloth@gmail.com>
Co-Authored-By: supr1795 <234802632+supr1795@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
       # GCC comes pre-installed on Windows runner via MSYS2
       - name: Compile Crypt Vault (C++17)
         run: |
-          mkdir build
+          if (!(Test-Path build)) { mkdir build }
           g++ -o build/Crypt-Vault.exe Crypt-Vault.cpp -std=c++17 -Wall -Wextra -O2 -ladvapi32
 
       - name: Run E2E Encryption/Decryption Test
